--- a/index.html
+++ b/index.html
@@ -10017,7 +10017,7 @@
                         <div className="text-center">
                             <div className="animate-spin rounded-full h-16 w-16 border-b-4 border-indigo-600 mx-auto mb-4"></div>
                             <p className="text-gray-600">Loading Life Ninja...</p>
-                            <p className="text-gray-400 text-sm mt-2">V2.15.2</p>
+                            <p className="text-gray-400 text-sm mt-2">V2.15.5</p>
                         </div>
                     </div>
                 );
@@ -10031,8 +10031,8 @@
                             <div className="text-center mb-8">
                                 <Target className="text-indigo-600 mx-auto mb-4" size={48} />
                                 <h1 className="text-3xl font-bold text-gray-900 mb-2">Life Ninja</h1>
-                                <p className="text-xl font-bold text-indigo-600 mb-1">V2.15.2</p>
-                                <p className="text-gray-600 text-sm">Bug Fixes</p>
+                                <p className="text-xl font-bold text-indigo-600 mb-1">V2.15.5</p>
+                                <p className="text-gray-600 text-sm">Persona Sync + Search Fix</p>
                             </div>
                             
                             <div className="mb-6">
@@ -10143,7 +10143,7 @@
                                 <div className="flex items-center gap-3">
                                     <Target className="text-indigo-600" size={32} />
                                     <h1 className="text-2xl font-bold text-gray-900">Life Ninja</h1>
-                                    <span className="text-sm bg-orange-600 text-white px-3 py-1 rounded-full font-bold">V2.15.2</span>
+                                    <span className="text-sm bg-orange-600 text-white px-3 py-1 rounded-full font-bold">V2.15.5</span>
                                 </div>
 
                                 <div className="flex items-center gap-4">
